# nlr-fraud-detection

./: .gitignore  README.md  cursor_fraud_detection_prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  flask_app.py  main.py
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  SUCCESS_CRITERIA.md  TESTING.md
notebooks/: 01_eda_synthetic.ipynb
scripts/: train.py
src/nlr_fraud/: __init__.py  config.py  features.py  preprocess.py  synthetic_data.py  train.py
tests/: test_api.py  test_synthetic_data.py
